fix: scroll-margin-topを修正＆目次のsticky追従を完全に修正（overflow削除）

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -280,21 +280,21 @@ p {
 }
 
 /* 記事ページのスタイル */
-.article-container h1,
-.article-container h2,
-.article-container h3,
-.article-container h4,
-.article-container h5,
-.article-container h6 {
-  scroll-margin-top: 6rem;
+article h1,
+article h2,
+article h3,
+article h4,
+article h5,
+article h6 {
+  scroll-margin-top: 7rem;
 }
 
-.article-container h2 {
+article h2 {
   position: relative;
   padding-left: 20px;
 }
 
-.article-container h2::before {
+article h2::before {
   @apply bg-accentColor;
   content: '';
   position: absolute;
